[gd_scene load_steps=3 format=3 uid="uid://deb45fx53opx6"]

[ext_resource type="Script" uid="uid://cd6127kreh5hv" path="res://Scripts/display_area.gd" id="1_wcxoy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wcxoy"]
size = Vector2(144, 92)

[node name="DisplayArea" type="Area2D" groups=["display_area"]]
process_mode = 3
script = ExtResource("1_wcxoy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_wcxoy")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
